# Chrome_Card

./: .gitignore  agent.py  api_server.py  cache.py  config.py  main.py  mcp_server.py  models.py  pyproject.toml  requirements.txt  server.py  test_genai.py
Email-mcp-main/: .gitignore
Email-mcp-main/email-mcp/: .gitignore  api_server.py  requirements.txt
Email-mcp-main/email-mcp/.cursor/: mcp.json
Email-mcp-main/email-mcp/app/: __init__.py  config.py  main.py
Email-mcp-main/email-mcp/app/employees/: __init__.py  directory.py  registry.py  repository.py  seed.py
Email-mcp-main/email-mcp/app/gmail/: __init__.py  client.py  credentials.py  factory.py  real_client.py  stub.py
Email-mcp-main/email-mcp/app/mcp_server/: server.py
Email-mcp-main/email-mcp/app/policy/: __init__.py  directory.py  recipient_policy.py
Email-mcp-main/email-mcp/app/rag/: __init__.py  embeddings.py  factory.py  ingest.py  retrieval.py  store.py
Email-mcp-main/email-mcp/app/replies/: __init__.py  parse.py  tracker.py
Email-mcp-main/email-mcp/app/storage/: __init__.py  db.py  models.py  repository.py  tracking_repository.py
Email-mcp-main/email-mcp/app/workflows/: __init__.py  graph.py  orchestrator.py
Email-mcp-main/email-mcp/examples/: sample_corpus.jsonl
Email-mcp-main/email-mcp/scripts/: mcp_stdio.sh
backend-springboot/: pom.xml
extension/: manifest.json  popup.html
extension/js/: api.js  auth.js  background.js  content.js
scripts/: demo_agent_chat.py  smoke_test_backend.py
tools/: auth.py  availability.py  events.py  gmail.py  undo.py
(+10 files in other folders)
